JavaScript Basic Assignments

--- a/JS(19072022)/If-Else/ifelse.html
+++ b/JS(19072022)/If-Else/ifelse.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IfElse</title>
-    <link rel="stylesheet" href="stylein.css">
+    <link rel="stylesheet" href="../Styles in JS/stylein.css">
 </head>
 <body>
     <div class="block">
