--- a/JS(20072022)/Google/Google.html
+++ b/JS(20072022)/Google/Google.html
@@ -12,7 +12,7 @@
 <body>
     <div class="out-block">
         <div class="left-box">
-            <div class="red" id="done"></div>
+            <div class="black" id="done"></div>
             <div><img src="./google-logo.jpg" alt="logo" width="90"></div>
             <div>
                 <h2>Creating your Google Account</h2>
@@ -29,7 +29,7 @@
             <div class="email">
                 <div><input id="email" class="username" type="email" placeholder="Username">
                     <div class="red" id="thirderror"></div>
-                    <div class="comments">You can use letters,number & periods</div>
+                    <div class="comments" id="info">You can use letters,number & periods</div>
                 </div>
             </div>
             <div>
@@ -37,7 +37,7 @@
                     <div><input id="password" type="password" placeholder="Password"> <div class="red" id="fortherror"></div></div>
                     <div><input id="confirm" type="password" placeholder="Confirm"> <div class="red" id="fiftherror"></div></div>
                 </div>
-                <div class="comments"> Use 8 more characters with a mix of letters, numbers & symbols</div>
+                <div class="comments" id="info1"> Use 8 more characters with a mix of letters, numbers & symbols</div>
                 <div class='checkbox'><span><input class="showpassword" type="checkbox"></span><span><label>Show
                             Password</label></span></div>
                 <div class="response">
