--- a/JS(20072022)/Registration Form/Registrationform.html
+++ b/JS(20072022)/Registration Form/Registrationform.html
@@ -18,7 +18,7 @@
             </div>
             <div class="input">
                 <label>Email*</label><br>
-               <input type="text" id="email" placeholder="Enter your Email">
+               <input type="email" id="email" placeholder="Enter your Email">
                <div class="error" id="emailerror"></div>
             </div>
             <div class="input">
