--- a/JS(20072022)/Google/Google.html
+++ b/JS(20072022)/Google/Google.html
@@ -15,7 +15,7 @@
             <div class="black" id="done"></div>
             <div><img src="./google-logo.jpg" alt="logo" width="90"></div>
             <div>
-                <h2>Creating your Google Account</h2>
+                <h2>Create your Google Account</h2>
             </div>
             <div>to continue to Gmail</div>
             <div class="name">
