--- a/JS(22072022)/Medical.html
+++ b/JS(22072022)/Medical.html
@@ -39,8 +39,8 @@
         </nav>
     </header>
     <main>
-        <div><img src="./images/banner.png" alt="banner" width="100%"></div>
-        <div class="block-1">
+        <section><img src="./images/banner.png" alt="banner" width="100%"></section>
+        <section class="block-1">
             <div class="block-1-sub">
                 <div class="block-1-part-1">
                     <div class="part-1-heading"><h2>More Doctors.More Hospitals.More Choice</h2></div>
@@ -66,28 +66,119 @@
                      </div> 
                 </div>
             </div>
-        </div>  
-        <div class="block-2">
+        </section>  
+        <section class="block-2">
             <div><img src="./images/image.png" alt="img"></div>
             <div class="description">
                <div><h2>Turning 26? Stay Covered with BCBSND</h2></div>
                <div>Turning 26? Stay covered with insuarance and providers you've come to know and trust.</div>
                <div class="read-more">Read More  <i class="fa-solid fa-arrow-right-long"></i> </div>
             </div>
-        </div>
-        <div  class="block-3">
+        </section>
+        <section  class="block-3">
             <div class="banner3"><img src="./images/banner1.png" alt="b1" width="100%"></div>
             <div class="banner3"><img src="./images/banner2.png" alt="b2"width="100%"></div>
             <div class="banner3"><img src="./images/banner3.png" alt="b3"width="100%"></div>
-        </div>
-        <div class="block-4">
+        </section>
+        <section class="block-4">
             <div class="que">
                 <div><h2>Why are Blue Cross Blue Sheild North Dakota members</h2></div>
                 <div><h2>among the most satisfied in the nation?</h2></div>
                 <div class="ans">Widely accepted coverage and superior service from fellow North Dakotans at 10 offices across the state.</div>
             </div>
-        </div>
+            <div class="block-4-sub-block-1">
+                <div class="across">Across North Dakota</div>
+                <div class="percent-box">
+                    <div class="percent-sub-box">
+                        <div class="percent-heading">99.6%</div>
+                        <div class="blue-ul2">__</div>
+                        <div class="percent-caption">Doctors</div>
+                        <div class="percent-sub-caption">Nearly Every one in North Dakota</div>
+                    </div>
+                    <div class="percent-sub-box">
+                        <div class="percent-heading">100%</div>
+                        <div class="blue-ul2">__</div>
+                        <div class="percent-caption">Hospitals</div>
+                        <div class="percent-sub-caption">Rural and urban across the state</div>
+                    </div>
+                        <img src="./images/image2.png" alt="img">
+                    <div class="percent-sub-box">
+                        <div class="percent-heading">#1 </div>
+                        <div class="blue-ul2">__</div>
+                        <div class="percent-caption">Service</div>
+                        <div class="percent-sub-caption">Rated among Blues plans nationwide*</div>
+                        <div class="sub-sub-caption">*As measured BCBSA Member Touchpoint Metrics,Sept.2017</div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="block-4-sub-block-1">
+                <div  class="across"> Across the Globe</div>
+                <div class="count-box">
+                    <div class="count-sub-box">
+                        <div class="count-heading">50</div>
+                        <div class="blue-ul2">__</div>
+                        <div class="count-caption">States</div>
+                        <div  class="count-sub-caption">85% of hospitals and physicians in the U.S</div>
+                    </div>
+                    <img src="./images/image3.png" alt="img">
+                    <div class="count-sub-box">
+                        <div class="count-heading">200</div>
+                        <div class="blue-ul2">__</div>
+                        <div class="count-caption" >Countries</div>
+                        <div class="count-sub-caption">Worldwide acceptance of BCBSND coverage</div>
+                    </div>
+                </div>
+            </div>
+            <div class="button-block">
+              <button class="button-1">Find a doctor <i class="fa-solid fa-arrow-right-long"></i></button>
+              <button class="button-2">Farmacy Resource <i class="fa-solid fa-arrow-right-long"></i></button>
+            </div>
+        </section>
     </main>
+    <footer>
+        <section class="contact-block">
+            <div><span class="contact-name"> Plan Sales :</span><span class="contact-no">  800-280-2583  </span></div>
+            <div class="contact-b">|</div>
+            <div> <span class="contact-name"> Members Services :</span><span class="contact-no">  844-363-8457</span></div>
+        </section>
+        <section class="footer-block">
+            <div class="footer-nav">
+                <div class="nav-footer-links">About</div>
+                <div class="nav-footer-links">News</div>
+                <div class="nav-footer-links">Careers</div>
+                <div class="nav-footer-links">Caring Foundations</div>
+                <div class="nav-footer-links">Privacy & Legal</div>
+                <div class="nav-footer-links">Contact</div>
+            </div>
+            <div class="partners">
+                <div class="partners-h">Our Partners in Health:</div>
+                <div class="partners-li">Employers</div>
+                <div class="partners-h">|</div>
+                <div class="partners-li">Providers</div>
+                <div class="partners-h">|</div>
+                <div class="partners-li">Producers</div>
+            </div>
+            <div class="footer-nav">
+                <img class="social-icons" src="./images/social_icon.png" alt="icon">
+                <img class="social-icons" src="./images/social_icon1.png" alt="icon">
+                <img class="social-icons" src="./images/social_icon2.png" alt="icon">
+            </div>
+            <div class="license-box" >
+                <div class="footer-heading">Blue Cross Blue Sheild of North Dakota</div>
+                <div class="footer-adress">4510 13th Avenue South</div>
+                <div class="footer-adress">Fargo,North Dakota 58121</div>
+            </div>
+            <div>
+                <div class="license">Blue Cross Blue Sheild of North Dakota is an undependent license of the the Blue Cross and Blue Sheild Assocition,serving resdidents and bussinesses in North Dakota.</div>
+                <div class="license">2019 Blue Cross Blue Sheild of North Dakota.All rights reserved.</div>
+            </div>
+            <div>
+                <img src="./images/footer.png" alt="footer-img">
+            </div>
+        </section>
+    </footer>
    
 </body>
 </html>
