--- a/JS(22072022)/Medical.html
+++ b/JS(22072022)/Medical.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/1013fd2e79.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical</title>
-    <link rel="stylesheet" href="./Medical.css">
+    <link rel="stylesheet" href="./styles/medical.css">
 </head>
 <body>
     <header>
@@ -22,6 +22,7 @@
                 <div><a class="right-header-links" href="">Doctors & Pharmacy</a></div>
                 <div><a class="right-header-links" href="">Contact</a></div> 
                 <input class="search" type="search" placeholder="Search">  
+                <i class="fa-solid fa-magnifying-glass glass"></i>
             </div>
             <div class="login-part">
                 <div><a class="login-links" href=""><i class="fa-solid fa-user"></i></a><a href="" class="login-links">Login</a> </div>
@@ -39,7 +40,14 @@
         </nav>
     </header>
     <main>
-        <section><img src="./images/banner.png" alt="banner" width="100%"></section>
+        <section ><img src="./images/banner.png" class="banner" alt="banner" width="100%"></section>
+        <section class="banner-content">
+            <div>
+                <div class="banner-text1">Keeping you well means</div>
+                <div class="banner-text2">knowing you well</div>
+            </div>
+               <a href=""> <button  class="button-start">Getting Started <i class="fa-solid fa-arrow-right-long"></i></button></a>
+        </section>
         <section class="block-1">
             <div class="block-1-sub">
                 <div class="block-1-part-1">
@@ -77,8 +85,11 @@
         </section>
         <section  class="block-3">
             <div class="banner3"><img src="./images/banner1.png" alt="b1" width="100%"></div>
+            <button class="banner-button1">Group Health Plans <i class="fa-solid fa-arrow-right-long"></i></button></button>
             <div class="banner3"><img src="./images/banner2.png" alt="b2"width="100%"></div>
+            <button class="banner-button2">Individual & Family Plans <i class="fa-solid fa-arrow-right-long"></i></button></button>
             <div class="banner3"><img src="./images/banner3.png" alt="b3"width="100%"></div>
+            <button class="banner-button3">Medicare Plans <i class="fa-solid fa-arrow-right-long "></i></button></button>
         </section>
         <section class="block-4">
             <div class="que">
@@ -133,7 +144,7 @@
             </div>
             <div class="button-block">
               <button class="button-1">Find a doctor <i class="fa-solid fa-arrow-right-long"></i></button>
-              <button class="button-2">Farmacy Resource <i class="fa-solid fa-arrow-right-long"></i></button>
+              <button class="button-2">Pharmacy Resource <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
         </section>
     </main>
