--- a/JS(22072022)/Medical.html
+++ b/JS(22072022)/Medical.html
@@ -102,20 +102,20 @@
                 <div class="percent-box">
                     <div class="percent-sub-box">
                         <div class="percent-heading">99.6%</div>
-                        <div class="blue-ul2">__</div>
+                        <div class="blue-ul2">____</div>
                         <div class="percent-caption">Doctors</div>
                         <div class="percent-sub-caption">Nearly Every one in North Dakota</div>
                     </div>
                     <div class="percent-sub-box">
                         <div class="percent-heading">100%</div>
-                        <div class="blue-ul2">__</div>
+                        <div class="blue-ul2">____</div>
                         <div class="percent-caption">Hospitals</div>
                         <div class="percent-sub-caption">Rural and urban across the state</div>
                     </div>
                         <img src="./images/image2.png" alt="img">
                     <div class="percent-sub-box">
                         <div class="percent-heading">#1 </div>
-                        <div class="blue-ul2">__</div>
+                        <div class="blue-ul2">____</div>
                         <div class="percent-caption">Service</div>
                         <div class="percent-sub-caption">Rated among Blues plans nationwide*</div>
                         <div class="sub-sub-caption">*As measured BCBSA Member Touchpoint Metrics,Sept.2017</div>
