--- a/JS(22072022)/Medical.html
+++ b/JS(22072022)/Medical.html
@@ -129,14 +129,14 @@
                 <div class="count-box">
                     <div class="count-sub-box">
                         <div class="count-heading">50</div>
-                        <div class="blue-ul2">__</div>
+                        <div class="blue-ul2">___</div>
                         <div class="count-caption">States</div>
                         <div  class="count-sub-caption">85% of hospitals and physicians in the U.S</div>
                     </div>
                     <img src="./images/image3.png" alt="img">
                     <div class="count-sub-box">
                         <div class="count-heading">200</div>
-                        <div class="blue-ul2">__</div>
+                        <div class="blue-ul2">___</div>
                         <div class="count-caption" >Countries</div>
                         <div class="count-sub-caption">Worldwide acceptance of BCBSND coverage</div>
                     </div>
