--- a/JS(27072022)/sliderdots.html
+++ b/JS(27072022)/sliderdots.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider added dots</title>
+    <style>
+         button{
+            padding: 10px 15px;
+            background-color:  #0d6efd;
+            color: white;
+            width: 150px;
+        }
+        button:hover{
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <div>
