--- a/JS(29072022)/objecttable.html
+++ b/JS(29072022)/objecttable.html
@@ -9,7 +9,19 @@
 </head>
 
 <body text="red">
+    
     <table bgcolor="yellow" border="5" cellspacing="0" cellpadding="10" align="centre">
+        <thead>
+            <tr align="centre">
+                <th>Sr.No</th>
+                <th>Name</th>
+                <th>Mobile No.</th>
+                <th>Roll No.</th>
+                <th>Semester</th>
+                <th>Branch</th>
+                <th>Grade</th>
+            </tr>
+        </thead>
         <tbody id="studentinfo"></tbody>
     </table>
     <script src="./objecttable.js"></script>
