--- a/JS(30072022)/Session Storage/Storage files/sessionstorage.html
+++ b/JS(30072022)/Session Storage/Storage files/sessionstorage.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Session Storage</title>
+    <style>
+        .info{
+            text-align: center;
+            font-size: 24px;
+            border: 4px solid red;
+            font-family: Arial, Helvetica, sans-serif;
+            padding: 30px;
+        }
+    </style>
 </head>
 <body>
-    Welcome!!!
-    <div id="firstname"></div>
-    <div id="lastname"></div>
-    <div id="email"></div>
+    <div class="info">
+        Welcome!!!
+        <div id="firstname"></div>
+        <div id="lastname"></div>
+        <div id="email"></div>
+    </div>
+   
     <script src="./sessionstorage.js"></script>
 </body>
 </html>
