--- a/JS(30072022)/Session Storage/storage.html
+++ b/JS(30072022)/Session Storage/storage.html
@@ -19,23 +19,23 @@
             </div>
             <div>to continue to Gmail</div>
             <div class="name">
-                <div><input id="firstname" type="text" placeholder="First name">
+                <div><input id="firstname" type="text" placeholder="First name" onclick="firstname()">
                     <div class="red" id="firsterror"></div>
                 </div>
-                <div><input id="lastname" type="text" placeholder="Last name">
+                <div><input id="lastname" type="text" placeholder="Last name" onclick="lastname()">
                     <div class="red" id="seconderror"></div>
                 </div>
             </div>
             <div class="email">
-                <div><input id="email" class="username" type="email" placeholder="Username">
+                <div><input id="email" class="username" type="email" placeholder="Username" onclick="email()">
                     <div class="red" id="thirderror"></div>
                     <div class="comments" id="info">You can use letters,number & periods</div>
                 </div>
             </div>
             <div>
                 <div class="password">
-                    <div><input id="password" type="password" placeholder="Password"> <div class="red" id="fortherror"></div></div>
-                    <div><input id="confirm" type="password" placeholder="Confirm"> <div class="red" id="fiftherror"></div></div>
+                    <div><input id="password" type="password" placeholder="Password" onclick="password()"> <div class="red" id="fortherror"></div></div>
+                    <div><input id="confirm" type="password" placeholder="Confirm" onclick="confirm()"> <div class="red" id="fiftherror"></div></div>
                 </div>
                 <div class="comments" id="info1"> Use 8 more characters with a mix of letters, numbers & symbols</div>
                 <div class='checkbox'><span><input class="showpassword" type="checkbox"></span><span><label>Show
