--- a/JQ(02082022)/intro.html
+++ b/JQ(02082022)/intro.html
@@ -19,7 +19,7 @@
     <br>
     <br>
     <br>
-    <div>
+    <div class="banners">
         <div class="show-bronco"><img src="./ford.jpg" alt="img" width="100%"></div>
         <div class="show-truck"><img src="./ford2.jpg" alt="img" width="100%"></div>
         <div class="show-mustang"><img src="./ford3.jpg" alt="img" width="100%"></div>
