--- a/ES(05082022)/Filter.html
+++ b/ES(05082022)/Filter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ES6</title>
+    <title>Filter & Map</title>
     <style>
         table{
             border: 1px solid black;
@@ -27,6 +27,6 @@
 <body>
     <input type="text" placeholder="SearchID" id="filterdata" onkeyup="filter()"/>
     <table id="info"></table>
-    <script src="./intro.js"></script>
+    <script src="./Filter.js"></script>
 </body>
 </html>
