--- a/ES(07082022)/calculator.html
+++ b/ES(07082022)/calculator.html
@@ -13,13 +13,13 @@
         <div><input type="number" id="number1" placeholder="Enter Value" ></div>
         <div><input type="number" id="number2" placeholder="Enter Value"></div>
         <div class="buttons">
-        <button onclick="addition()">+</button>
-        <button onclick="substraction()">-</button>
-        <button onclick="division()">/</button>
-        <button onclick="multiplication()">x</button>
+        <button onclick="calci.addition()">+</button>
+        <button onclick="calci.substraction()">-</button>
+        <button onclick="calci.division()">/</button>
+        <button onclick="calci.multiplication()">x</button>
         </div>
         <div  class="ans"  id="result">Answer</div>
     </div>
-    <script src="./calci.js"></script>
+    <script src="./calculator.js"></script>
 </body>
 </html>
