--- a/practice.html
+++ b/practice.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div>
-        <input type="text" class="input-text" placeholder="Search" tabindex="0">
+        <input type="text" class="writeText" placeholder="Search" tabindex="0">
     </div>
-    <div class="show-input-text">
+    <div class="showText">
 
     </div>
 </body>
