--- a/practice.html
+++ b/practice.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="practice.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="practice.js"></script>
+    <style>
+        input{
+            padding: 30px;
+            font-size: x-large;
+        }
+        .showText{
+            font-size: x-large;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
     <div>
