--- a/ES(19082022)/slider.html
+++ b/ES(19082022)/slider.html
@@ -20,6 +20,6 @@
       </div>
       <div id="test"></div>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="slider.jss"></script>
+      <script src="slider.js"></script>
 </body>
 </html>
