--- a/ES(19082022)/slider.html
+++ b/ES(19082022)/slider.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="slider.css">
 </head>
 <body>
-    <div class="container">
+    
         <div class="slider">
           <div class="box1">
           </div>
@@ -17,9 +17,9 @@
           <div class="box3">
           </div>
         </div>
-      </div>
+      
       <div id="test"></div>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="slider.js"></script>
+      <script src="slider.jss"></script>
 </body>
 </html>
