--- a/ES(19082022)/slider.html
+++ b/ES(19082022)/slider.html
@@ -19,6 +19,11 @@
         </div>
       
       <div id="test"></div>
+      <div class="buttons">
+        <button onclick="slidephoto1()"></button>
+        <button onclick="sliderphoto2()"></button>
+        <button onclick="sliderphoto3()"></button>
+    </div>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="slider.js"></script>
 </body>
