--- a/ES(19082022)/slider.html
+++ b/ES(19082022)/slider.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     
-        <div class="slider">
+        <section class="slider">
           <div class="box1">
           </div>
           <div class="box2">
           </div>
           <div class="box3">
           </div>
-        </div>
+        </section>
       
       <div id="test"></div>
       <div class="buttons">
